# mitsugen

./: .gitignore  README.md  install.sh  pyproject.toml
assets/custom-dark/: index.theme
assets/custom-dark/gtk-3.0/: gtk-dark.css  gtk.css
example/: config.ini
example/templates/: Dark.css  Light.css  MaterialYouColors.theme.css  color.ini  gnome-shell-dark.css  gnome-shell.css  gtk.css  gtk_3_dark.css  gtk_3_light.css  gtk_dark.css  obsidian-theme.css  spotify_colors.ini  vivaldi.css
matugen/: main.py  util.py
matugen/assets/Marble-blue-dark/gnome-shell/: gnome-shell.css
matugen/assets/Marble-blue-light/gnome-shell/: gnome-shell.css
matugen/assets/custom-light/: index.theme
matugen/assets/custom-light/gtk-3.0/: gtk.css
matugen/material_color_utilities_python/: .gitignore  LICENSE.md  README.md  pyproject.toml
matugen/material_color_utilities_python/material_color_utilities_python/scheme/: scheme.py
matugen/material_color_utilities_python/material_color_utilities_python/utils/: theme_utils.py
src/: main.py  models.py  transformers.py  util.py
src/applier/: domain.py
src/material_color_utilities_python/palettes/: core_palette.py
src/material_color_utilities_python/utils/: image_utils.py  theme_utils.py
src/ui/: app.py
src/ui/widgets/: color_picker.py  colors_popover.py  material.py
