[tool.poetry]
name = "matugen"
version = "0.1.0"
description = ""
authors = ["dimitriosmilonopoulos@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "13.3.1"
pillow = "^9.4.0"
regex = "^2023.3.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
