[tool.poetry]
name = "mitsugen"
version = "0.1.1"
description = ""
authors = ["dimitriosmilonopoulos@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "13.3.1"
pillow = "^9.4.0"
pygobject = "^3.44.1"
material = "^0.1"
pydantic = "^1.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
